// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers handle SET_CUSTOM 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 2,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsKey": "diceware",
}
`;

exports[`reducers handle SET_LENGTH 1`] = `
Object {
  "length": 7,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsKey": "diceware",
}
`;

exports[`reducers handle SET_OPTIONS_KEY 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsKey": "custom",
}
`;

exports[`reducers handle TOGGLE_GENERIC 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": false,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsKey": "diceware",
}
`;

exports[`reducers return initial state 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsKey": "diceware",
}
`;
